--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 57 E - 6300628.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 57 E - 6300628.md
@@ -1,28 +1,38 @@
 # Article 57 E
 
-Le directeur régional des douanes et droits indirects peut créer un débit de tabac ordinaire saisonnier lorsqu'aucun débit de
-tabac ordinaire permanent situé sur la même commune ne permet d'assurer convenablement l'approvisionnement de la clientèle
-saisonnière, en raison de son éloignement du site touristique ou de la trop grande fréquentation de celui-ci.
+Les gérants des débits de tabac ordinaires visés à l'article 244 septies de l'annexe III au code général des impôts fixent
+les heures d'ouverture et de fermeture du débit de tabac ordinaire en se conformant notamment aux habitudes locales du
+commerce.
+
+Le commerce annexé ne peut pas être ouvert si le débit de tabac est fermé. En revanche, un débitant de tabac peut fermer le
+commerce annexé et n'ouvrir que le point de vente tabac.
+
+Les débitants de tabac qui occupent également un poste de correspondant local des douanes et droits indirects doivent avoir
+les mêmes horaires et jours d'ouverture pour ces deux activités.
 
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Arrêté 2004-01-16 art. 1 JORF 18 janvier 2004
 
 _Codifié par_:
 
   - Arrêté 2004-10-08
+  - L'abrogation sera codifiée ultérieurement
 
-_Transféré par_:
+_Modifié par_:
 
   - Arrêté 2004-10-08 art. 1 JORF 10 octobre 2004
 
-_Nouveaux textes_:
+_Abrogé par_:
 
-  - CGIAN4 57 B
+  - Arrêté 2007-07-27 art. 13 JORF 9 août 2007
+
+_Cite_:
+
+  - CGIAN3 244 septies
+
+_Anciens textes_:
+
+  - CGIAN4 57 H
 
 **Liens**:
 
-  - HISTO: Edition du 1er janvier 2004
   - HISTO: Edition du 31 août 2004
