--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 57 I - 6300636.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 57 I - 6300636.md
@@ -1,28 +1,41 @@
 # Article 57 I
 
-Lorsque le gérant d'un débit de tabac ordinaire doit s'absenter exceptionnellement, pendant la période d'ouverture du débit,
-pour une durée ne dépassant pas une journée, ou pour activité syndicale, il peut, s'il n'a pas la possibilité de se faire
-remplacer par son suppléant, confier la tenue du débit à un salarié en situation régulière au regard du droit du travail.
+Le gérant de débit de tabac ordinaire qui, pour des raisons de santé, ne peut pas exercer ses fonctions peut se faire
+remplacer dans la gestion du débit par une personne de son choix, à condition que le remplaçant soit une personne citée au
+III de l'article 57 H.
+
+Le remplacement ne peut pas excéder six mois, éventuellement renouvelables une fois.
+
+Pendant le remplacement, le gérant conserve ses droits en matière de rémunération et de régime d'allocation viagère.
+
+Les manquements aux obligations du contrat mentionné au deuxième alinéa du 1 de l'article 244 sexies de l'annexe III au code
+général des impôts relevés à l'encontre du suppléant ou du salarié ont les mêmes conséquences que s'ils étaient imputables au
+gérant titulaire.
 
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Arrêté 2004-01-16 art. 1 JORF 18 janvier 2004
 
 _Codifié par_:
 
   - Arrêté 2004-10-08
+  - L'abrogation sera codifiée ultérieurement
 
-_Transféré par_:
+_Modifié par_:
 
   - Arrêté 2004-10-08 art. 1 JORF 10 octobre 2004
 
-_Nouveaux textes_:
+_Abrogé par_:
 
-  - CGIAN4 57 F
+  - Arrêté 2007-07-27 art. 13 JORF 9 août 2007
+
+_Cite_:
+
+  - CGIAN3 244 sexies
+  - CGIAN4 57 H
+
+_Anciens textes_:
+
+  - CGIAN4 57 L
 
 **Liens**:
 
-  - HISTO: Edition du 1er janvier 2004
   - HISTO: Edition du 31 août 2004
