--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 57 J - 6300638.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 57 J - 6300638.md
@@ -1,32 +1,39 @@
 # Article 57 J
 
-La fermeture hebdomadaire des débits de tabac ordinaires est facultative et limitée à deux journées par semaine, consécutives
-ou non.
+Le transfert d'un débit de tabac ordinaire consiste dans le déplacement dans la même commune, par son gérant, de ce point de
+vente et de l'ensemble des activités commerciales qui y sont éventuellement annexées. Tout transfert d'un débit de tabac
+ordinaire dans une autre commune que celle de son implantation initiale est interdit.
 
-Les gérants choisissent librement les jours de fermeture hebdomadaire de leurs débits.
+Tout transfert d'un débit de tabac ordinaire doit être autorisé préalablement par le directeur régional des douanes et droits
+indirects, après avis consultatif de l'organisation professionnelle citée au I de l'article 57.
 
-Les jours de fermeture, ils doivent apposer, sur la devanture du magasin, une affiche comportant l'adresse d'au moins un
-débit ouvert parmi les plus proches, dans le quartier, l'arrondissement, la commune ou le canton.
+L'autorisation est délivrée lorsque le transfert n'est pas de nature à déséquilibrer le réseau existant en occasionnant un
+préjudice certain aux débitants les plus proches du nouveau lieu d'implantation, qui serait la conséquence d'un rapprochement
+trop important entraînant une réduction significative de la zone de chalandise de ceux-ci.
 
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Arrêté 2004-01-16 art. 1 JORF 18 janvier 2004
 
 _Codifié par_:
 
   - Arrêté 2004-10-08
+  - L'abrogation sera codifiée ultérieurement
 
-_Transféré par_:
+_Modifié par_:
 
   - Arrêté 2004-10-08 art. 1 JORF 10 octobre 2004
 
-_Nouveaux textes_:
+_Abrogé par_:
 
-  - CGIAN4 57 G
+  - Arrêté 2007-07-27 art. 13 JORF 9 août 2007
+
+_Cite_:
+
+  - CGIAN4 57
+
+_Anciens textes_:
+
+  - CGIAN4 57 M
 
 **Liens**:
 
-  - HISTO: Edition du 1er janvier 2004
   - HISTO: Edition du 31 août 2004
