--- a/03. Livre II : Recouvrement de l'impôt/Article 189 - 6301976.md
+++ b/03. Livre II : Recouvrement de l'impôt/Article 189 - 6301976.md
@@ -1,26 +1,26 @@
 # Article 189
 
-Pour l'application des articles 1692 à 1697 du code général des impôts, le redevable peut, sauf disposition contraire, se
+Pour l'application des articles 1692 à 1696 du code général des impôts, le redevable peut, sauf disposition contraire, se
 libérer soit en numéraire, soit au moyen de chèque bancaire ou postal suivant les modalités fixées aux articles 199 à 204,
-soit par virement opéré au compte de chèques postaux du receveur des impôts compétent.
+soit par virement opéré au compte de chèques postaux du receveur des impôts compétent. 
 
 Il peut également se libérer au moyen d'un mandat compte émis au profit de ce même receveur.
 
 **Liens relatifs à cet article**
 
+_Codifié par_:
+
+  - Arrêté 2004-10-08
+
 _Modifié par_:
 
-  - Arrêté 1997-10-22 art. 1 I JORF 31 octobre 1997
-
-_Cite_:
-
-  - CGI 1692 à 1697
-  - CGIAN4 199 à 204
+  - Ordonnance n°2004-281 du 25 mars 2004 - art. 15 () JORF 27 mars 2004
 
 _Cité par_:
 
   - Code général des impôts, annexe 4, CGIAN4. - art. 193 (V)
 
-**Liens**:
+_Cite_:
 
-  - HISTO: Edition du 22 avril 1998
+  - Code général des impôts, annexe 4, CGIAN4. - art. 199 (V)
+  - Code général des impôts, CGI. - art. 1692 (V)
