--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 A - 6301747.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 159 A - 6301747.md
@@ -25,17 +25,17 @@ ruminants d'élevage : 47 euros/t.
 
 5,00 euros/t.
 
-2. Le taux b est fixé à 197 euros par tonne de déchets.
+2. Le taux b est fixé à 0 euro par tonne de déchets.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Arrêté 2004-04-23 art. 2, art. 3 JORF 24 avril 2004
+  - Arrêté 2005-09-28 art. 1, art. 2 JORF 29 septembre 2005
 
 _Codifié par_:
 
-  - Arrêté 2004-10-08
+  - Arrêté 2006-03-24
 
 _Cite_:
 
@@ -45,4 +45,4 @@ _Cite_:
 
 **Liens**:
 
-  - HISTO: Edition du 31 août 2004
+  - HISTO: Edition du 1er janvier 2006
