--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 56 AC - 6300609.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 56 AC - 6300609.md
@@ -1,10 +1,14 @@
 # Article 56 AC
 
-Chaque fournisseur recouvre auprès des débitants la valeur au prix de détail des tabacs livrés  déduction faite de la seule
-part des remises sur ventes qu'une décision du ministre de l'économie et des finances autorise à allouer directement aux
-débitants de tabacs.
+Chaque fournisseur recouvre auprès des débitants la valeur au prix de détail des tabacs livrés, déduction faite de la remise
+nette. La remise nette s'entend de la remise mentionnée au 3° du I de l'article 570 du code général des impôts moins le
+précompte défini à l'article 281 de l'annexe II au code général des impôts.
 
 **Liens relatifs à cet article**
+
+_Modifié par_:
+
+  - Arrêté 2006-02-13 art. 1 I JORF 15 février 2006
 
 _Cité par_:
 
@@ -12,3 +16,8 @@ _Cité par_:
   - Décret n°2017-977 du 10 mai 2017 - art. 6 (V)
   - Décret n°2017-977 du 10 mai 2017 - art. 8 (V)
   - Code général des impôts, annexe 2, CGIAN2. - art. 282 (V)
+
+_Cite_:
+
+  - Code général des impôts, annexe 2, CGIAN2. - art. 281 (V)
+  - Code général des impôts, CGI. - art. 570 (V)
