--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 56 AP - 6300616.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 56 AP - 6300616.md
@@ -1,10 +1,17 @@
 # Article 56 AP
 
-Les dispositions des articles 56 AA à 56 AO ne s'appliquent ni dans les départements de la Corse ni dans les départements
-d'outre-mer.
+Les dispositions des articles 56 AA à 56 AO ne s'appliquent pas dans les départements d'outre-mer.
 
 **Liens relatifs à cet article**
+
+_Modifié par_:
+
+  - Arrêté 2006-02-13 art. 3 JORF 15 février 2006
 
 _Cite_:
 
   - CGIAN4 56 AA à CGIAN4 56 AO
+
+**Liens**:
+
+  - HISTO: Edition du 1er janvier 2006
