--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 56 AJ - 6300770.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 56 AJ - 6300770.md
@@ -1,28 +1,38 @@
 # Article 56 AJ
 
-Au plus tard le 15 de chaque mois chaque fournisseur doit faire parvenir à l'administration des douanes et droits indirects
-un relevé relatif aux livraisons qu'il a effectuées au cours du mois précédent et indiquant :
+1. La déclaration des quantités de tabacs manufacturés livrées au débitant au cours du mois précédent mentionnées au deuxième
+alinéa de l'article 568 du code général des impôts et au dixième alinéa de l'article 2 du décret n° 63-1104 du 30 octobre
+1963 modifié est conforme au modèle figurant en annexe I au présent arrêté. Cette déclaration est établie en un exemplaire
+sur papier à en-tête du fournisseur. Elle est datée et signée. Elle est transmise au receveur régional des douanes et droits
+indirects de Paris - Ile-de-France accompagnée du moyen de paiement correspondant.
 
-1° pour chaque débitant approvisionné la valeur au prix de détail des quantités livrées ; 
+2. La déclaration mensuelle des livraisons mentionnée au deuxième alinéa de l'article 568 du code général des impôts comporte
+les informations suivantes :
 
-2° pour l'ensemble de ses livraisons :
+- nom ou raison sociale et adresse du fournisseur ;
 
-le total pour chaque produit des quantités livrées avec rappel du prix de l'unité dans laquelle ces quantités sont
-exprimées ;
+- matricule du débit ;
 
-la valeur globale de ses livraisons au prix de détail ; 
+- code débitant (numéro d'ordre du gérant) ;
 
-le complément de remise sur vente dont il est redevable égal à la différence entre la remise totale et la partie de remise
-allouée directement aux débitants en application de l'article 56 AC ci-dessus. 
+- type de mouvement : livraisons, reprises, corrections de livraisons et corrections de reprises ;
 
-Ce complément est versé par chaque fournisseur à l'administration des douanes et droits indirects dans les dix jours qui
-suivent le dépôt du relevé.
+- montant du mouvement ;
+
+- montant de la remise nette allouée.
+
+Cette déclaration est datée et transmise par voie informatique au centre informatique douanier.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Arrêté 1993-01-04 art. 1 JORF 5 janvier 1993
+  - Arrêté 2006-02-13 art. 2 JORF 15 février 2006
+
+_Cite_:
+
+  - Décret n°63-1104 du 30 octobre 1963 - art. 2 (M)
+  - CGI 568
 
 _Cité par_:
 
@@ -30,10 +40,6 @@ _Cité par_:
   - Décret n°2016-1987 du 30 décembre 2016 - art. 2 (V)
   - Code général des impôts, annexe 4, CGIAN4. - art. 56 AJ (V)
 
-_Cite_:
-
-  - CGIAN4 56 AC
-
 **Liens**:
 
-  - HISTO: Edition du 18 août 1993
+  - HISTO: Edition du 1er janvier 2006
