--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 131 A - 6300883.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 131 A - 6300883.md
@@ -1,10 +1,11 @@
 # Article 131 A
 
-I. Les billets prévus à l'article 1564 du code général des impôts peuvent être établis par un système informatisé dont les
-caractéristiques et le fonctionnement doivent être conformes au cahier des charges annexé à l'arrêté du 8 mars 1993.
+I. – Pour l'application de l'article 1564 du code général des impôts, les organisateurs de réunions sportives et les
+exploitants de spectacles peuvent utiliser un système informatisé dont les caractéristiques et le fonctionnement doivent être
+conformes au cahier des charges annexé à l'arrêté du 8 mars 1993 modifié.
 
-II. Les organisateurs de réunions sportives et les exploitants d'établissements de spectacles visés à l'article 1559 du code
-précité déclarent à la direction régionale des douanes et droits indirects dont ils dépendent la mise en service d'un système
+II. – Les organisateurs de réunions sportives et les exploitants de spectacles mentionnés à l'article 1559 du code précité
+déclarent à la direction régionale des douanes et droits indirects dont ils dépendent la mise en service d'un système
 informatisé de billetterie au plus tard lors de la première utilisation.
 
 Cette déclaration comporte les mentions suivantes nécessaires à la description du système utilisé :
@@ -31,14 +32,11 @@ alinéa.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté 1993-03-08 art. 2 JORF 24 mars 1993
+  - Arrêté 2007-10-05 art. 8 JORF 7 octobre 2007
 
 _Cite_:
 
-  - CGI 1564, 1559
-
-**Liens**:
-
-  - HISTO: Edition du 18 août 1993
+  - Code général des impôts, CGI. - art. 1559 (V)
+  - Code général des impôts, CGI. - art. 1564 (V)
