--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 17 D - 6301223.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 17 D - 6301223.md
@@ -1,18 +1,19 @@
 # Article 17 D
 
-Les documents  états et pièces tenus ou établis en application des articles 17 B, 17 C et 188 I sont conservés à la
-disposition de l'administration selon les modalités prévues au I de l'article L. 102 B du livre des procédures fiscales.
+Les documents états et pièces tenus ou établis en application des articles 17 B, 17 C, 17 C bis, 188 I et 188 L sont
+conservés à la disposition de l'administration selon les modalités prévues au I de l'article L. 102 B du livre des procédures
+fiscales.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
-
-  - Arrêté 1990-09-10
-
-**Liens**:
-
-  - HISTO: Edition du 15 juin 1990
-
 _Modifié par_:
 
-  - Loi n°89-936 du 29 décembre 1989 - art. 103 () JORF 30 décembre 1989
+  - Arrêté du 15 septembre 2008 - art. 1
+
+_Cite_:
+
+  - Code général des impôts, annexe 4, CGIAN4. - art. 17 B
+  - Code général des impôts, annexe 4, CGIAN4. - art. 17 C
+  - Code général des impôts, annexe 4, CGIAN4. - art. 188 I
+  - Code général des impôts, annexe 4, CGIAN4. - art. 188 L (V)
+  - Livre des procédures fiscales - art. L102 B
