--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 6 B - 27287493.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 6 B - 27287493.md
@@ -2,276 +2,66 @@
 
 Le barème forfaitaire mentionné au 3° de l'article 83 du code général des impôts est fixé comme suit : 
 
-<table>
-  <tbody>
-    <tr>
-      <td colspan="4">
+<pre>
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ TARIF APPLICABLE AUX AUTOMOBILES                                                                                         ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ Puissance administrative du véhicule en chevaux (CV) │ Jusqu'à 5 000 km │ De 5 001 km à 20 000 km │ Au-delà de 20 000 km ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ 3 CV et moins                                        │ d × 0,408        │ (d × 0,244) + 820       │ d × 0,285            ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ 4 CV                                                 │ d × 0,491        │ (d × 0,276) + 1 077     │ d × 0,330            ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ 5 CV                                                 │ d × 0,540        │ (d × 0,303) + 1 182     │ d × 0,362            ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ 6 CV                                                 │ d × 0,565        │ (d × 0,318) + 1 238     │ d × 0,380            ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ 7 CV et plus                                         │ d × 0,592        │ (d × 0,335) + 1 282     │ d × 0,399            ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ d représente la distance parcourue en kilomètres.                                                                        ┃
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+</pre>
 
-TARIFS APPLICABLES AUX AUTOMOBILES 
-      </td>
-    </tr>
-    <tr>
-      <td> Puissance administrative du véhicule en chevaux (CV)</td>
-      <td> Jusqu'à 5 000 km </td>
-      <td> De 5 001 km à 20 000 km </td>
-      <td> Au-delà de 20 000 km </td>
-    </tr>
-    <tr>
-      <td align="center">
-
-3 CV et moins 
-
-</td>
-      <td align="center">
-
-d × 0,405 
-
-</td>
-      <td align="center">
-
-(d × 0,242) + 818 
-
-</td>
-      <td align="center">
-
-d × 0,283 
-
-</td>
-    </tr>
-    <tr>
-      <td align="center">
-
-4 CV 
-
-</td>
-      <td align="center">
-
-d × 0,487 
-
-</td>
-      <td align="center">
-
-(d × 0,274) + 1 063 
-
-</td>
-      <td align="center">
-
-d × 0,327 
-
-</td>
-    </tr>
-    <tr>
-      <td align="center">
-
-5 CV 
-
-</td>
-      <td align="center">
-
-d × 0,536 
-
-</td>
-      <td align="center">
-
-(d × 0,3) + 1 180 
-
-</td>
-      <td align="center">
-
-d × 0,359 
-
-</td>
-    </tr>
-    <tr>
-      <td align="center">
-
-6 CV 
-
-</td>
-      <td align="center">
-
-d × 0,561 
-
-</td>
-      <td align="center">
-
-(d × 0,316) + 1 223 
-
-</td>
-      <td align="center">
-
-d × 0,377 
-
-</td>
-    </tr>
-    <tr>
-      <td align="center">
-
-7 CV et plus 
-
-</td>
-      <td align="center">
-
-d × 0,587 
-
-</td>
-      <td align="center">
-
-(d × 0,332) + 1 278 
-
-</td>
-      <td align="center">
-
-d × 0,396 
-
-</td>
-    </tr>
-    <tr>
-      <td colspan="4">
-
-d représente la distance parcourue en kilomètres. 
-
-</td>
-    </tr>
-  </tbody>
-</table>
 
 .
 
-<table>
-  <tbody>
-    <tr>
-      <td colspan="4"> TARIF APPLICABLE AUX MOTOCYCLETTES </td>
-    </tr>
-    <tr>
-      <td align="center"> Puissance administrative du véhicule en chevaux (CV)</td>
-      <td align="center"> Jusqu'à 3 000 km </td>
-      <td align="center"> De 3 001 km à 6 000 km </td>
-      <td align="center"> Au-delà de 6 000 km </td>
-    </tr>
-    <tr>
-      <td align="center">
+<pre>
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ TARIF APPLICABLE AUX MOTOCYCLETTES                                                                                     ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ Puissance administrative du véhicule en chevaux (CV) │ Jusqu'à 3 000 km │ De 3 001 km à 6 000 km │ Au-delà de 6 000 km ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ 1 ou 2 CV                                            │ d × 0,336        │ (d × 0,084) + 756      │ d × 0,210           ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ 3, 4, 5 CV                                           │ d × 0,398        │ (d × 0,070) + 984      │ d × 0,234           ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ plus de 5 CV                                         │ d × 0,515        │ (d × 0,067) + 1344     │ d × 0,291           ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ d représente la distance parcourue en kilomètres.                                                                      ┃
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+</pre>
 
-1 ou 2 CV 
-
-</td>
-      <td align="center">
-
-d × 0,333 
-
-</td>
-      <td align="center">
-
-(d × 0,083) + 750 
-
-</td>
-      <td align="center">
-
-d × 0,208 
-
-</td>
-    </tr>
-    <tr>
-      <td align="center">
-
-3,4,5 CV 
-
-</td>
-      <td align="center">
-
-d × 0,395 
-
-</td>
-      <td align="center">
-
-(d × 0,069) + 978 
-
-</td>
-      <td align="center">
-
-d × 0,232 
-
-</td>
-    </tr>
-    <tr>
-      <td align="center">
-
-Plus de 5 CV 
-
-</td>
-      <td align="center">
-
-d × 0,511 
-
-</td>
-      <td align="center">
-
-(d × 0,067) + 1 332 
-
-</td>
-      <td align="center">
-
-d × 0,289 
-
-</td>
-    </tr>
-    <tr>
-      <td colspan="4">
-
-d représente la distance parcourue en kilomètres. 
-
-</td>
-    </tr>
-  </tbody>
-</table>
 
 .
 
-<table>
-  <tbody>
-    <tr>
-      <td colspan="4">
+<pre>
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ TARIF APPLICABLE AUX CYCLOMOTEURS                               ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┬┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ Jusqu'à 2 000 km │ De 2 001 km à 5 000 km │ Au-delà de 5 000 km ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┼┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ d × 0,268        │ (d × 0,063) + 410      │ d × 0,145           ┃
+┠┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┴┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┨
+┃ d représente la distance parcourue en kilomètres.               ┃
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+</pre>
 
-TARIF APPLICABLE AUX CYCLOMOTEURS 
-      </td>
-    </tr>
-    <tr>
-      <td> Jusqu'à 2 000 km </td>
-      <td> De 2 001 à 5 000 km </td>
-      <td colspan="2"> Au-delà de 5 000 km </td>
-    </tr>
-    <tr>
-      <td align="center">
-
-d × 0,266 
-
-</td>
-      <td align="center">
-
-(d × 0,063) + 406 
-
-</td>
-      <td align="center">
-
-d × 0,144 
-
-</td>
-    </tr>
-    <tr>
-      <td colspan="4">
-
-d représente la distance parcourue en kilomètres.
-
-</td>
-    </tr>
-  </tbody>
-</table>
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Arrêté du 30 mars 2013 - art. 1
+  - Arrêté du 19 mai 2014 - art. 1
 
 _Cite_:
 
