--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 17 E - 6301226.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 17 E - 6301226.md
@@ -1,54 +1,54 @@
 # Article 17 E
 
-I. Les assureurs auprès desquels ont été souscrits des contrats ou des avenants d'augmentation d'assurance en cas de vie ou
+I. – Les assureurs auprès desquels ont été souscrits des contrats ou des avenants d'augmentation d'assurance en cas de vie ou
 d'assurance en cas de décès, dont les primes peuvent ouvrir droit à la réduction d'impôt prévue à l'article 199 septies du
 code général des impôts, sont tenus de délivrer chaque année aux souscripteurs de ces contrats ou avenants un certificat
-permettant aux intéressés de bénéficier de la réduction d'impôt prévue ci-dessus ; 
+permettant aux intéressés de bénéficier de la réduction d'impôt prévue ci-dessus ;
 
-II. Le certificat prévu au I comporte, selon un modèle publié par l'administration, les indications suivantes :
+II. – Le certificat prévu au I comporte, selon un modèle publié par l'administration, les indications suivantes :
 
-- désignation de l'assureur ;
+– désignation de l'assureur ;
 
-- nom, prénoms et adresse du souscripteur ;
+– nom, prénoms et adresse du souscripteur ;
 
-- numéro du contrat ;
+– numéro du contrat ;
 
-- date d'effet et durée du contrat ou de l'avenant ;
+– date d'effet et durée du contrat ou de l'avenant ;
 
-- montant des primes venues à échéance au cours de l'année civile. 
+– montant des primes venues à échéance au cours de l'année civile.
 
-Il précise en outre : 
+Il précise en outre :
 
-1. Pour les contrats ou avenants visés au 1° de l'article 199 septies susvisé : 
+1. Pour les contrats ou avenants visés au 1° de l'article 199 septies susvisé :
 
-a) la nature du contrat : contrat à " primes périodiques ", à " prime unique " ou " à versements libres " ; 
+a) la nature du contrat : contrat à " primes périodiques ", à " prime unique " ou " à versements libres " ;
 
-b) Le montant des primes représentatif de l'opération d'épargne en distinguant : 
+b) Le montant des primes représentatif de l'opération d'épargne en distinguant :
 
 1° Le montant correspondant aux primes payées au titre de contrats à primes périodiques conclus ou prorogés avant le 20
-septembre 1995 ; 
+septembre 1995 ;
 
 2° Le montant correspondant aux primes payées au titre des contrats à primes périodiques conclus ou prorogés du 20 septembre
-1995 au 31 décembre 1995 ; 
+1995 au 31 décembre 1995 ;
 
 3° Le montant correspondant aux primes payées au titre de contrats à primes périodiques conclus ou prorogés du 1er janvier
 1996 au 4 septembre 1996.
 
 2. pour les contrats ou avenants prévus au 2° de l'article 199 septies les nom et prénoms du bénéficiaire du capital ou de la
-rente viagère ; 
+rente viagère ;
 
-III. Lorsque les contrats d'assurance en cas de décès visés au 2° de l'article 199 septies sont souscrits sous la forme de
-contrats collectifs, l'organisme souscripteur délivre à ses adhérents le certificat décrit au II. 
+III. – Lorsque les contrats d'assurance en cas de décès visés au 2° de l'article 199 septies sont souscrits sous la forme de
+contrats collectifs, l'organisme souscripteur délivre à ses adhérents le certificat décrit au II.
 
-IV. Le certificat décrit au II est joint par le souscripteur à sa déclaration d'ensemble des revenus de l'année au titre de
-laquelle il peut bénéficier de la réduction d'impôt.
+IV. – Pour bénéficier de la réduction d'impôt sur le revenu, le contribuable doit être en mesure de présenter, à la demande
+de l'administration, le certificat décrit au II.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Arrêté 1997-12-22 art. 1, art. 2 JORF 26 décembre 1997
+  - Arrêté du 10 juin 2014 - art. 1
 
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 199 septies (V)
+  - Code général des impôts, CGI. - art. 199 septies
