--- a/02. Livre II : Recouvrement de l'impôt/Article 215 - 27520603.md
+++ b/02. Livre II : Recouvrement de l'impôt/Article 215 - 27520603.md
@@ -14,16 +14,22 @@ délégation dont ils disposent ;
 
 2. Les directeurs régionaux et les chefs des services spécialisés des douanes et droits indirects, mentionnés au II de
 l'article 214, peuvent subdéléguer la signature du directeur mentionné au I de l'article 408 de l'annexe II au code général
-des impôts à l'effet de prendre les décisions et actes mentionnés aux 1°, 2° et 4° du I et au II de l'article 212 : 
+des impôts : 
 
-1° Aux agents de catégorie A titulaires d'un grade supérieur à celui d'inspecteur des douanes, dans les limites qu'ils fixent
-eux-mêmes, sans toutefois pouvoir excéder la délégation dont ils disposent ; 
+1° Aux agents de catégories A et B exerçant leurs fonctions dans les services de direction, dans des limites qu'ils fixent
+eux-mêmes, à l'effet de prendre l'ensemble des actes et décisions mentionnés aux 1°, 2° et 4° du I et au II de l'article 212,
+sans toutefois pouvoir excéder la délégation dont ils disposent ; 
 
-2° Aux inspecteurs des douanes placés sous leur autorité, dans la limite de 40 000 € ; 
+2° Aux autres agents, à l'effet de prendre les actes et décisions mentionnées aux 1°, 2° et 4° du I de l'article 212 : 
 
-3° Aux agents de catégorie B placés sous leur autorité, dans la limite de 30 000 € ; 
+a) Dans les limites qu'ils fixent eux-mêmes, sans toutefois pouvoir excéder la délégation dont ils disposent, pour les agents
+de catégorie A titulaires d'un grade supérieur à celui d'inspecteur des douanes ; 
 
-4° Aux agents de catégorie C placés sous leur autorité, dans la limite de 20 000 €. 
+b) Dans la limite de 40 000 € pour les inspecteurs des douanes placés sous leur autorité ; 
+
+c) Dans la limite de 30 000 € pour les agents de catégorie B placés sous leur autorité ; 
+
+d) Dans la limite de 20 000 € pour les agents de catégorie C placés sous leur autorité. 
 
 II. – Par acte publié dans les conditions prévues au V de l'article 408 de l'annexe II au code général des impôts, le
 directeur mentionné au I de ce même article peut, en tant que de besoin, réduire l'étendue des délégations que peuvent donner
@@ -37,10 +43,10 @@ ou les retirer en tout ou partie.
 
 _Modifié par_:
 
-  - Arrêté du 19 janvier 2017 - art. 1
+  - Arrêté du 29 décembre 2017 - art. 1
 
 _Cite_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 408 (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 408
   - Code général des impôts, annexe 4, CGIAN4. - art. 212
-  - Code général des impôts, annexe 4, CGIAN4. - art. 214 (V)
+  - Code général des impôts, annexe 4, CGIAN4. - art. 214
